# nix-glass

./: .gitmodules  data.py  flake.nix  site.nix
datagen/: package.nix  pyproject.toml
datagen/datagen/: datagen.py
nix-glass-data/datagen/: __init__.py  datagen.py
site/: config.toml
