[project]
name = "nix-glass-data"  # Required
version = "0.1.0"  # Required

requires-python = ">=3.11"

dependencies = [ # Optional
  "toml"
]

[project.scripts]  # Optional
nix-glass-data = "datagen:main"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
